# mcuxsdk-middleware-connectivity-framework

./: CHANGELOG.md  CMakeLists.txt  Kconfig  SBOM.spdx.json  SCR.txt  index.rst  set_middleware_wireless_framework.cmake
Common/: CMakeLists.txt  MicroSpecific_arm_sdk2.h  fwk_errno.h  fwk_hal_macros.h
DBG/SWO/: fwk_debug_swo.c
DebugExceptionHandlers_jn518x/src/: MicroExceptions_arm.c
FSAbstraction/: fwk_fs_abstraction.c
FileCache/: fwk_file_cache.c
HWParameter/: HWParameter.c
KeyStorage/: fwk_key_storage.c
LowPower/: PWR_cli.c
MWSCoexistence/Interface/: MWS.h
MWSCoexistence/Source/: WCI2.c
ModuleInfo/: ModuleInfo.c
NVM/Interface/: NVM_Interface.h
NVM/Source/: NV_Flash.c
NVS/: CMakeLists.txt
NVS/Source/: fwk_nvs_ExternalFlash.c  fwk_nvs_InternalFlash.c
OtaSupport/Interface/: OtaSupport.h
OtaSupport/Source/: OtaExternalFlash.c  OtaInternalFlash.c  OtaSupport.c
PDUM/Include/: pdum_nwk.h
RNG/: CMakeLists.txt  RNG.c
SecLib/: CMakeLists.txt  SecLib.c  SecLib_ecp256.h  SecLib_mbedTLS.c  SecLib_sss.c
TimersManager/Source/: TimersManager.c
XCVR/DK6/: fsl_xcvr.c  fsl_xcvr.h  radio.h
boards/kw45_k32w1/: CMakeLists.txt
boards/rdrw612bga/: board.h  pin_mux.c  pin_mux.h
manifests/: middleware_nxp_conn_fwk_K32W1480_manifest_v3_14.xml  middleware_nxp_conn_fwk_KW45B41Z83_manifest_v3_14.xml  middleware_nxp_conn_fwk_MCXW716C_manifest_v3_14.xml  middleware_nxp_conn_fwk_MIMXRT1062_manifest_v3_14.xml  middleware_nxp_conn_fwk_MIMXRT1176_manifest_v3_14.xml  middleware_nxp_conn_fwk_MIMXRT595S_manifest_v3_14.xml  middleware_nxp_conn_fwk_RW612_manifest_v3_14.xml
platform/: CMakeLists.txt  Kconfig
platform/Common/: fwk_platform_mflash.ch
platform/MIMXRT595S/: CMakeLists.txt  Kconfig.defconfig
platform/connected_mcu/: CMakeLists.txt  fwk_platform.c  fwk_platform_ble.c  fwk_platform_definitions.h  fwk_platform_extflash.c  fwk_platform_genfsk.c  fwk_platform_ics.c  fwk_platform_ics.h  fwk_platform_intflash.c  fwk_platform_lcl.c  fwk_platform_lcl.h  fwk_platform_ot.c  fwk_platform_ota.c  fwk_platform_zb.c
platform/connected_mcu/configs/: fwk_config.h
platform/imx_rt/: CMakeLists.txt  Kconfig
platform/include/: fwk_platform_zb.h
platform/kw43_mcxw70/: CMakeLists.txt  fwk_platform_definitions.h
platform/kw43_mcxw70_nbu/: CMakeLists.txt  fwk_platform_dbg.c  fwk_platform_definitions.h
platform/kw45_k32w1_mcxw71/: CMakeLists.txt  fwk_platform_definitions.h  fwk_platform_kw45_mcxw71.c
platform/kw45_k32w1_mcxw71_nbu/: CMakeLists.txt  fwk_platform_dbg.c  fwk_platform_definitions.h  fwk_platform_kw45_mcxw71_nbu.c
platform/kw47_mcxw72/: CMakeLists.txt  fwk_platform_dbg.c  fwk_platform_definitions.h
platform/kw47_mcxw72_nbu/: CMakeLists.txt  Kconfig.defconfig  fwk_platform_dbg.c  fwk_platform_kw47_mcxw72_nbu.c
platform/mcxw23/: CMakeLists.txt  Kconfig.defconfig  fwk_platform.c  fwk_platform_ble.c  fwk_platform_definitions.h  fwk_platform_extflash.c  fwk_platform_ota.c  fwk_platform_sensors.c
platform/rt1060/: CMakeLists.txt  Kconfig.defconfig  fwk_platform_definitions.h  fwk_platform_extflash.c
platform/rt1170/: CMakeLists.txt  Kconfig.defconfig  fwk_platform_definitions.h
platform/rw61x/: CMakeLists.txt  Kconfig.defconfig  fwk_platform.c  fwk_platform.h  fwk_platform_ble.c  fwk_platform_hdlc.c  fwk_platform_lowpower.c  fwk_platform_lowpower.h  fwk_platform_sensors.c  (+2 more)
(+132 files in other folders)
